force-app/main/default/objects/Lead/fields/AgreeYN__c.field-meta.xml
<CustomField>
    <fullName>AgreeYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>개인정보제공 동의시에 체크</description>
    <label>AgreeYN</label>
    <type>Checkbox</type>
</CustomField>