force-app/main/default/objects/Lead/fields/AgreeYN_c__c.field-meta.xml
<CustomField>
    <fullName>AgreeYN_c__c</fullName>
    <description>개인정보이용약관동의여부(&apos;Y&apos; or &apos;N&apos;)</description>
    <label>AgreeYN__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>