force-app/main/default/objects/Lead/fields/ApplicationDetails__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDetails__c</fullName>
    <description>지원내역</description>
    <label>Application Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>