force-app/main/default/objects/Lead/fields/ApplicationRate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRate__c</fullName>
    <description>지원율(%)</description>
    <inlineHelpText>순매출의 %를 기준으로 작성, 설명회 당시 기재하지 않거나 못한 경우 지원내역에 관련 사항 작성.</inlineHelpText>
    <label>Application Rate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>