force-app/main/default/objects/Lead/fields/apvCancelYmd__c.field-meta.xml
<CustomField>
    <fullName>apvCancelYmd__c</fullName>
    <label>apvCancelYmd</label>
    <type>Date</type>
</CustomField>