force-app/main/default/objects/Lead/fields/arsltApplDocRcptDt__c.field-meta.xml
<CustomField>
    <fullName>arsltApplDocRcptDt__c</fullName>
    <label>arsltApplDocRcptDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>