force-app/main/default/objects/Lead/fields/arsltApplDocRcptMthdNm__c.field-meta.xml
<CustomField>
    <fullName>arsltApplDocRcptMthdNm__c</fullName>
    <label>arsltApplDocRcptMthdNm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>