force-app/main/default/objects/Lead/fields/AssignBudgetAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>AssignBudgetAmountCurrency__c</fullName>
    <description>나라장터 입찰공고 배정 예산 금액</description>
    <label>Assign Budget Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>