force-app/main/default/objects/Lead/fields/bfSpecRgstNo__c.field-meta.xml
<CustomField>
    <fullName>bfSpecRgstNo__c</fullName>
    <label>bfSpecRgstNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>