force-app/main/default/objects/Lead/fields/BidBeginDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidBeginDateTime__c</fullName>
    <description>나라장터 공고의 입찰 개시 일시</description>
    <label>Bid Begin Date/Time</label>
    <type>DateTime</type>
</CustomField>