force-app/main/default/objects/Lead/fields/BidCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidCloseDateTime__c</fullName>
    <description>나라장터 공고 입찰 마감 일시</description>
    <label>Bid Close Date/Time</label>
    <type>DateTime</type>
</CustomField>