force-app/main/default/objects/Lead/fields/BidDeterminMethod__c.field-meta.xml
<CustomField>
    <fullName>BidDeterminMethod__c</fullName>
    <description>국방전자조달시스템 낙찰자결정방법</description>
    <label>Bid Determin Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>