force-app/main/default/objects/Lead/fields/bidGrntymnyPaymntYn__c.field-meta.xml
<CustomField>
    <fullName>bidGrntymnyPaymntYn__c</fullName>
    <label>bidGrntymnyPaymntYn</label>
    <length>30</length>
    <type>Text</type>
</CustomField>