force-app/main/default/objects/Lead/fields/BidMethod__c.field-meta.xml
<CustomField>
    <fullName>BidMethod__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 입찰 방식</description>
    <label>Bid Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>