force-app/main/default/objects/Lead/fields/BidNoticeDetailUrl__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeDetailUrl__c</fullName>
    <description>나라장터 입찰공고의 상세페이지를 확인 할 수 있는 URL</description>
    <label>Bid Notice Detail Url</label>
    <type>Url</type>
</CustomField>