force-app/main/default/objects/Lead/fields/BidNoticeName__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeName__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 입찰 공고명</description>
    <externalId>true</externalId>
    <label>Bid Notice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>