force-app/main/default/objects/Lead/fields/BidNoticeNumber__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeNumber__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 입찰 공고 번호</description>
    <externalId>true</externalId>
    <label>Bid Notice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>