force-app/main/default/objects/Lead/fields/BidNoticeSource__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeSource__c</fullName>
    <description>입찰 공고 소스 사이트 (예, 나라장터, EAT)</description>
    <label>Bid Notice Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>