force-app/main/default/objects/Lead/fields/BidNoticeStatus__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeStatus__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 공고 상태명 Picklist Value</description>
    <label>Bid Notice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>