force-app/main/default/objects/Lead/fields/bidNtceDt__c.field-meta.xml
<CustomField>
    <fullName>bidNtceDt__c</fullName>
    <label>bidNtceDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>