force-app/main/default/objects/Lead/fields/bidNtceOrd__c.field-meta.xml
<CustomField>
    <fullName>bidNtceOrd__c</fullName>
    <label>bidNtceOrd</label>
    <length>2</length>
    <type>Text</type>
</CustomField>