force-app/main/default/objects/Lead/fields/bidNtceUrl__c.field-meta.xml
<CustomField>
    <fullName>bidNtceUrl__c</fullName>
    <label>bidNtceUrl</label>
    <type>TextArea</type>
</CustomField>