force-app/main/default/objects/Lead/fields/BidOpenDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidOpenDateTime__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 개찰 일시</description>
    <label>Bid Open Date/Time</label>
    <type>DateTime</type>
</CustomField>