force-app/main/default/objects/Lead/fields/BidOpenPlace__c.field-meta.xml
<CustomField>
    <fullName>BidOpenPlace__c</fullName>
    <description>나라장터 입찰 공고의 개찰 장소</description>
    <label>Bid Open Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>