force-app/main/default/objects/Lead/fields/bidPrtcptFee__c.field-meta.xml
<CustomField>
    <fullName>bidPrtcptFee__c</fullName>
    <label>bidPrtcptFee</label>
    <length>21</length>
    <type>Text</type>
</CustomField>