force-app/main/default/objects/Lead/fields/bidPrtcptFeePaymntYn__c.field-meta.xml
<CustomField>
    <fullName>bidPrtcptFeePaymntYn__c</fullName>
    <label>bidPrtcptFeePaymntYn</label>
    <length>30</length>
    <type>Text</type>
</CustomField>