force-app/main/default/objects/Lead/fields/BidRegistCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidRegistCloseDateTime__c</fullName>
    <description>국방전달조달시스템 입찰참가등록 마감일시</description>
    <label>Bid Regist Close Date/Time</label>
    <type>DateTime</type>
</CustomField>