force-app/main/default/objects/Lead/fields/BidStatus__c.field-meta.xml
<CustomField>
    <fullName>BidStatus__c</fullName>
    <description>국방전자조달시스템 입찰 형태</description>
    <label>Bid Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>