force-app/main/default/objects/Lead/fields/brffcBidprcPermsnYn__c.field-meta.xml
<CustomField>
    <fullName>brffcBidprcPermsnYn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Bidding Permission Y/N</label>
    <type>Checkbox</type>
</CustomField>