force-app/main/default/objects/Lead/fields/bsicExpt__c.field-meta.xml
<CustomField>
    <fullName>bsicExpt__c</fullName>
    <label>bsicExpt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>