force-app/main/default/objects/Lead/fields/bsisPrdprcApplcAt__c.field-meta.xml
<CustomField>
    <fullName>bsisPrdprcApplcAt__c</fullName>
    <label>bsisPrdprcApplcAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>