force-app/main/default/objects/Lead/fields/bsisPrdprcOthbcAt__c.field-meta.xml
<CustomField>
    <fullName>bsisPrdprcOthbcAt__c</fullName>
    <label>bsisPrdprcOthbcAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>