force-app/main/default/objects/Lead/fields/bsnsDivNm__c.field-meta.xml
<CustomField>
    <fullName>bsnsDivNm__c</fullName>
    <label>bsnsDivNm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>