force-app/main/default/objects/Lead/fields/BusinessConditions__c.field-meta.xml
<CustomField>
    <fullName>BusinessConditions__c</fullName>
    <label>BusinessConditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>