force-app/main/default/objects/Lead/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>영업형태 (홈/배달)</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>홈</fullName>
            </value>
            <value>
                <fullName>배달</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>