force-app/main/default/objects/Lead/fields/chgDt__c.field-meta.xml
<CustomField>
    <fullName>chgDt__c</fullName>
    <label>chgDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>