force-app/main/default/objects/Lead/fields/chgNtceRsn__c.field-meta.xml
<CustomField>
    <fullName>chgNtceRsn__c</fullName>
    <label>chgNtceRsn</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>