force-app/main/default/objects/Lead/fields/clgEnddt__c.field-meta.xml
<CustomField>
    <fullName>clgEnddt__c</fullName>
    <label>clgEnddt</label>
    <type>Date</type>
</CustomField>