force-app/main/default/objects/Lead/fields/clgStdt__c.field-meta.xml
<CustomField>
    <fullName>clgStdt__c</fullName>
    <label>clgStdt</label>
    <type>Date</type>
</CustomField>