force-app/main/default/objects/Lead/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>폐지일자</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>