force-app/main/default/objects/Lead/fields/cmmnSpldmdAgrmntClseDt__c.field-meta.xml
<CustomField>
    <fullName>cmmnSpldmdAgrmntClseDt__c</fullName>
    <label>cmmnSpldmdAgrmntClseDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>