force-app/main/default/objects/Lead/fields/cmmnSpldmdAgrmntRcptdocMethd__c.field-meta.xml
<CustomField>
    <fullName>cmmnSpldmdAgrmntRcptdocMethd__c</fullName>
    <label>cmmnSpldmdAgrmntRcptdocMethd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>