force-app/main/default/objects/Lead/fields/cmmnSpldmdCorpRgnLmtYn__c.field-meta.xml
<CustomField>
    <fullName>cmmnSpldmdCorpRgnLmtYn__c</fullName>
    <description>공동수급업체지역제한여부</description>
    <label>Subcontractor Region Restriction Y/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>