force-app/main/default/objects/Lead/fields/cmmnSpldmdMethdCd__c.field-meta.xml
<CustomField>
    <fullName>cmmnSpldmdMethdCd__c</fullName>
    <label>cmmnSpldmdMethdCd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>