force-app/main/default/objects/Lead/fields/cmmnSpldmdMethdNm__c.field-meta.xml
<CustomField>
    <fullName>cmmnSpldmdMethdNm__c</fullName>
    <label>cmmnSpldmdMethdNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>