force-app/main/default/objects/Lead/fields/CommonSupplierRegionLimitYN__c.field-meta.xml
<CustomField>
    <fullName>CommonSupplierRegionLimitYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>나라장터 공고의 공동 수급 업체 지역 제한 여부</description>
    <label>Common Supplier Region Limit Y/N</label>
    <type>Checkbox</type>
</CustomField>