force-app/main/default/objects/Lead/fields/CompanyRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegisterNumber__c</fullName>
    <label>Company Register Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>