force-app/main/default/objects/Lead/fields/ContractSignMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractSignMethod__c</fullName>
    <description>나라장터와 국방전자조달사이트에서 사용하는 공고 계약 체결 방법</description>
    <label>Contract Sign Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>