force-app/main/default/objects/Lead/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <description>국방전자조달시스템 계약 종류</description>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>