force-app/main/default/objects/Lead/fields/crdtrNm__c.field-meta.xml
<CustomField>
    <fullName>crdtrNm__c</fullName>
    <label>crdtrNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>