force-app/main/default/objects/Lead/fields/CustomType__c.field-meta.xml
<CustomField>
    <fullName>CustomType__c</fullName>
    <label>CustomType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>외식사업자</fullName>
                <default>true</default>
                <label>외식사업자</label>
            </value>
            <value>
                <fullName>급식사업자</fullName>
            </value>
            <value>
                <fullName>유통사업자</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>