force-app/main/default/objects/Lead/fields/d2bMngAssmntLwstlmtRt__c.field-meta.xml
<CustomField>
    <fullName>d2bMngAssmntLwstlmtRt__c</fullName>
    <label>d2bMngAssmntLwstlmtRt</label>
    <length>22</length>
    <type>Text</type>
</CustomField>