force-app/main/default/objects/Lead/fields/d2bMngAssmntUplmtRt__c.field-meta.xml
<CustomField>
    <fullName>d2bMngAssmntUplmtRt__c</fullName>
    <label>d2bMngAssmntUplmtRt</label>
    <length>22</length>
    <type>Text</type>
</CustomField>