force-app/main/default/objects/Lead/fields/d2bMngBssamt__c.field-meta.xml
<CustomField>
    <fullName>d2bMngBssamt__c</fullName>
    <label>d2bMngBssamt</label>
    <length>21</length>
    <type>Text</type>
</CustomField>