force-app/main/default/objects/Lead/fields/d2bMngCntrctKindNm__c.field-meta.xml
<CustomField>
    <fullName>d2bMngCntrctKindNm__c</fullName>
    <label>d2bMngCntrctKindNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>