force-app/main/default/objects/Lead/fields/d2bMngCntrybndDedtBgnDate__c.field-meta.xml
<CustomField>
    <fullName>d2bMngCntrybndDedtBgnDate__c</fullName>
    <label>d2bMngCntrybndDedtBgnDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>