force-app/main/default/objects/Lead/fields/d2bMngCntrybndDedtEndDate__c.field-meta.xml
<CustomField>
    <fullName>d2bMngCntrybndDedtEndDate__c</fullName>
    <label>d2bMngCntrybndDedtEndDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>