force-app/main/default/objects/Lead/fields/d2bMngCompCorpRsrchObjYn__c.field-meta.xml
<CustomField>
    <fullName>d2bMngCompCorpRsrchObjYn__c</fullName>
    <label>d2bMngCompCorpRsrchObjYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>