force-app/main/default/objects/Lead/fields/d2bMngDcmtgOprtnDt__c.field-meta.xml
<CustomField>
    <fullName>d2bMngDcmtgOprtnDt__c</fullName>
    <label>d2bMngDcmtgOprtnDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>