force-app/main/default/objects/Lead/fields/d2bMngDcmtgOprtnPlce__c.field-meta.xml
<CustomField>
    <fullName>d2bMngDcmtgOprtnPlce__c</fullName>
    <label>d2bMngDcmtgOprtnPlce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>