force-app/main/default/objects/Lead/fields/d2bMngDcsnNo__c.field-meta.xml
<CustomField>
    <fullName>d2bMngDcsnNo__c</fullName>
    <label>d2bMngDcsnNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>