force-app/main/default/objects/Lead/fields/d2bMngDmndYear__c.field-meta.xml
<CustomField>
    <fullName>d2bMngDmndYear__c</fullName>
    <label>d2bMngDmndYear</label>
    <length>4</length>
    <type>Text</type>
</CustomField>