force-app/main/default/objects/Lead/fields/d2bMngExetTyCd__c.field-meta.xml
<CustomField>
    <fullName>d2bMngExetTyCd__c</fullName>
    <label>d2bMngExetTyCd</label>
    <length>15</length>
    <type>Text</type>
</CustomField>