force-app/main/default/objects/Lead/fields/d2bMngExetTyNm__c.field-meta.xml
<CustomField>
    <fullName>d2bMngExetTyNm__c</fullName>
    <label>d2bMngExetTyNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>