force-app/main/default/objects/Lead/fields/d2bMngItemNo__c.field-meta.xml
<CustomField>
    <fullName>d2bMngItemNo__c</fullName>
    <label>d2bMngItemNo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>