force-app/main/default/objects/Lead/fields/d2bMngNgttnPlanDate__c.field-meta.xml
<CustomField>
    <fullName>d2bMngNgttnPlanDate__c</fullName>
    <label>d2bMngNgttnPlanDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>