force-app/main/default/objects/Lead/fields/d2bMngNgttnStleNm__c.field-meta.xml
<CustomField>
    <fullName>d2bMngNgttnStleNm__c</fullName>
    <label>d2bMngNgttnStleNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>