force-app/main/default/objects/Lead/fields/d2bMngOrgnlbdgtDedtBgnDate__c.field-meta.xml
<CustomField>
    <fullName>d2bMngOrgnlbdgtDedtBgnDate__c</fullName>
    <label>d2bMngOrgnlbdgtDedtBgnDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>