force-app/main/default/objects/Lead/fields/d2bMngOrgnlbdgtDedtEndDate__c.field-meta.xml
<CustomField>
    <fullName>d2bMngOrgnlbdgtDedtEndDate__c</fullName>
    <label>d2bMngOrgnlbdgtDedtEndDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>