force-app/main/default/objects/Lead/fields/d2bMngPblctPlceNm__c.field-meta.xml
<CustomField>
    <fullName>d2bMngPblctPlceNm__c</fullName>
    <label>d2bMngPblctPlceNm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>