force-app/main/default/objects/Lead/fields/d2bMngPrdctnAbltySbmsnClseDt__c.field-meta.xml
<CustomField>
    <fullName>d2bMngPrdctnAbltySbmsnClseDt__c</fullName>
    <label>d2bMngPrdctnAbltySbmsnClseDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>