force-app/main/default/objects/Lead/fields/d2bMngPrdlstCd__c.field-meta.xml
<CustomField>
    <fullName>d2bMngPrdlstCd__c</fullName>
    <label>d2bMngPrdlstCd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>