force-app/main/default/objects/Lead/fields/d2bMngProgrsSttusNm__c.field-meta.xml
<CustomField>
    <fullName>d2bMngProgrsSttusNm__c</fullName>
    <label>d2bMngProgrsSttusNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>