force-app/main/default/objects/Lead/fields/d2bMngRgnLmtYn__c.field-meta.xml
<CustomField>
    <fullName>d2bMngRgnLmtYn__c</fullName>
    <label>d2bMngRgnLmtYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>