force-app/main/default/objects/Lead/fields/d2bMngRgstEvalExmpYn__c.field-meta.xml
<CustomField>
    <fullName>d2bMngRgstEvalExmpYn__c</fullName>
    <label>d2bMngRgstEvalExmpYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>