force-app/main/default/objects/Lead/fields/d2bMngRrsrvtnPrceBssAplYn__c.field-meta.xml
<CustomField>
    <fullName>d2bMngRrsrvtnPrceBssAplYn__c</fullName>
    <label>d2bMngRrsrvtnPrceBssAplYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>