force-app/main/default/objects/Lead/fields/d2bMngRsrvtnPrceBssOpenYn__c.field-meta.xml
<CustomField>
    <fullName>d2bMngRsrvtnPrceBssOpenYn__c</fullName>
    <label>d2bMngRsrvtnPrceBssOpenYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>