force-app/main/default/objects/Lead/fields/d2bMngStdIndstryClsfcCdList__c.field-meta.xml
<CustomField>
    <fullName>d2bMngStdIndstryClsfcCdList__c</fullName>
    <label>d2bMngStdIndstryClsfcCdList</label>
    <type>TextArea</type>
</CustomField>