force-app/main/default/objects/Lead/fields/Databasedate__c.field-meta.xml
<CustomField>
    <fullName>Databasedate__c</fullName>
    <description>데이터기준일자</description>
    <label>Data base date</label>
    <type>Date</type>
</CustomField>