force-app/main/default/objects/Lead/fields/dcbYmd__c.field-meta.xml
<CustomField>
    <fullName>dcbYmd__c</fullName>
    <label>dcbYmd</label>
    <type>Date</type>
</CustomField>