force-app/main/default/objects/Lead/fields/dcsNo__c.field-meta.xml
<CustomField>
    <fullName>dcsNo__c</fullName>
    <description>판단번호</description>
    <label>dcsNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>