force-app/main/default/objects/Lead/fields/dlvrDaynum__c.field-meta.xml
<CustomField>
    <fullName>dlvrDaynum__c</fullName>
    <label>dlvrDaynum</label>
    <length>5</length>
    <type>Text</type>
</CustomField>