force-app/main/default/objects/Lead/fields/dlvrTmlmtDt__c.field-meta.xml
<CustomField>
    <fullName>dlvrTmlmtDt__c</fullName>
    <label>dlvrTmlmtDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>