force-app/main/default/objects/Lead/fields/dlvryCndtnNm__c.field-meta.xml
<CustomField>
    <fullName>dlvryCndtnNm__c</fullName>
    <label>dlvryCndtnNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>