force-app/main/default/objects/Lead/fields/dminsttOfclEmailAdrs__c.field-meta.xml
<CustomField>
    <fullName>dminsttOfclEmailAdrs__c</fullName>
    <label>dminsttOfclEmailAdrs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>