force-app/main/default/objects/Lead/fields/drwtPrdprcNum__c.field-meta.xml
<CustomField>
    <fullName>drwtPrdprcNum__c</fullName>
    <label>drwtPrdprcNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>