force-app/main/default/objects/Lead/fields/dsgntCmptYn__c.field-meta.xml
<CustomField>
    <fullName>dsgntCmptYn__c</fullName>
    <label>dsgntCmptYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>