force-app/main/default/objects/Lead/fields/dtilPrdctClsfcNo__c.field-meta.xml
<CustomField>
    <fullName>dtilPrdctClsfcNo__c</fullName>
    <label>dtilPrdctClsfcNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>