force-app/main/default/objects/Lead/fields/dtilPrdctClsfcNoNm__c.field-meta.xml
<CustomField>
    <fullName>dtilPrdctClsfcNoNm__c</fullName>
    <label>dtilPrdctClsfcNoNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>