force-app/main/default/objects/Lead/fields/exctvNm__c.field-meta.xml
<CustomField>
    <fullName>exctvNm__c</fullName>
    <label>exctvNm</label>
    <length>35</length>
    <type>Text</type>
</CustomField>