force-app/main/default/objects/Lead/fields/excutTy__c.field-meta.xml
<CustomField>
    <fullName>excutTy__c</fullName>
    <label>excutTy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>