force-app/main/default/objects/Lead/fields/fctyOwkEpCnt__c.field-meta.xml
<CustomField>
    <fullName>fctyOwkEpCnt__c</fullName>
    <label>fctyOwkEpCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>