force-app/main/default/objects/Lead/fields/fm_BidNoticeDetail__c.field-meta.xml
<CustomField>
    <fullName>fm_BidNoticeDetail__c</fullName>
    <description>Lead의 Bid Notice Detial Url의 값을 하이퍼링크로 지닌 채 상세보기로 표시하는 필드</description>
    <formula>HYPERLINK( BidNoticeDetailUrl__c , &quot;상세보기&quot;,&quot;_blank&quot;)</formula>
    <label>Bid Notice Detail</label>
    <type>Text</type>
</CustomField>