force-app/main/default/objects/Lead/fields/fm_LeadRecordLink__c.field-meta.xml
<CustomField>
    <fullName>fm_LeadRecordLink__c</fullName>
    <formula>(LEFT( $Api.Enterprise_Server_URL_280,FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_280))) &amp; &quot;lightning/r/Lead/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_LeadRecordLink</label>
    <type>Text</type>
</CustomField>