force-app/main/default/objects/Lead/fields/fm_LinkBidNoticeName__c.field-meta.xml
<CustomField>
    <fullName>fm_LinkBidNoticeName__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, BidNoticeName__c, &quot;_self&quot;)</formula>
    <label>fm_LinkBidNoticeName</label>
    <type>Text</type>
</CustomField>