force-app/main/default/objects/Lead/fields/fm_Rating__c.field-meta.xml
<CustomField>
    <fullName>fm_Rating__c</fullName>
    <formula>IF( Text(BusinessPath__c) = &quot;초등학교&quot; &amp;&amp; ( fm_SizeScore__c + fm_MonthlySalesScore__c + fm_FriendshipScore__c ) &gt;= 6 , $Label.FocusingElementry , IF (( fm_SizeScore__c + fm_MonthlySalesScore__c + fm_FriendshipScore__c ) &gt;= 8, $Label.VIP , IF(( fm_SizeScore__c + fm_MonthlySalesScore__c + fm_FriendshipScore__c ) &gt;= 6, $Label.Nurturing , IF(fm_SizeScore__c = 0 || fm_MonthlySalesScore__c = 0 || fm_FriendshipScore__c = 0, $Label.CustomerInformationNotEntered , $Label.etcetera ))))</formula>
    <inlineHelpText>[ Focusing Elementry = Total Point &gt;= 6 and Elementry School ]
[ VIP = Total Point &gt;= 8 ] [ Nurturing = Total Point &gt;= 6 ] [ et cetera = Total Point &lt; 6 ]</inlineHelpText>
    <label>Rating</label>
    <type>Text</type>
</CustomField>