force-app/main/default/objects/Lead/fields/FoundationName__c.field-meta.xml
<CustomField>
    <fullName>FoundationName__c</fullName>
    <description>재단명</description>
    <label>Foundation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>