force-app/main/default/objects/Lead/fields/FriendshipScore__c.field-meta.xml
<CustomField>
    <fullName>FriendshipScore__c</fullName>
    <inlineHelpText>[ High = 3 Point ]
[ Medium = 2 Point ]
[ Low = 1 Point ]</inlineHelpText>
    <label>Friendship Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FriendshipScore</valueSetName>
    </valueSet>
</CustomField>