force-app/main/default/objects/Lead/fields/g2bPblancNo__c.field-meta.xml
<CustomField>
    <fullName>g2bPblancNo__c</fullName>
    <externalId>true</externalId>
    <label>g2bPblancNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>