force-app/main/default/objects/Lead/fields/HasDeposit__c.field-meta.xml
<CustomField>
    <fullName>HasDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>보증금여부</description>
    <label>HasDeposit</label>
    <type>Checkbox</type>
</CustomField>