force-app/main/default/objects/Lead/fields/indutyVAT__c.field-meta.xml
<CustomField>
    <fullName>indutyVAT__c</fullName>
    <label>indutyVAT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>