force-app/main/default/objects/Lead/fields/infoBizYn__c.field-meta.xml
<CustomField>
    <fullName>infoBizYn__c</fullName>
    <label>infoBizYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>