force-app/main/default/objects/Lead/fields/intrbidYn__c.field-meta.xml
<CustomField>
    <fullName>intrbidYn__c</fullName>
    <label>intrbidYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>