force-app/main/default/objects/Lead/fields/IsCatering__c.field-meta.xml
<CustomField>
    <fullName>IsCatering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>캐터링여부</description>
    <label>IsCatering</label>
    <type>Checkbox</type>
</CustomField>