force-app/main/default/objects/Lead/fields/IsConglomerateRestrictionsYN__c.field-meta.xml
<CustomField>
    <fullName>IsConglomerateRestrictionsYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>중소기업만 참여할 수 있는 입찰인지에 대한 여부</description>
    <label>Conglomerate Restrictions Y/N</label>
    <type>Checkbox</type>
</CustomField>