force-app/main/default/objects/Lead/fields/IsDonationReceiptYN__c.field-meta.xml
<CustomField>
    <fullName>IsDonationReceiptYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>기부금영수증 처리 가능 여부</description>
    <label>Donation Receipt Y/N</label>
    <type>Checkbox</type>
</CustomField>