force-app/main/default/objects/Lead/fields/IsElectronicBidYN_c__c.field-meta.xml
<CustomField>
    <fullName>IsElectronicBidYN_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Electronic Bid YN</label>
    <type>Checkbox</type>
</CustomField>