force-app/main/default/objects/Lead/fields/IsReBid__c.field-meta.xml
<CustomField>
    <fullName>IsReBid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>나라장터 공고의 재입찰 허용 여부</description>
    <label>ReBid Y/N</label>
    <type>Checkbox</type>
</CustomField>