force-app/main/default/objects/Lead/fields/IsRegionalRestrictionYN__c.field-meta.xml
<CustomField>
    <fullName>IsRegionalRestrictionYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>전자입찰 참여 당시 지역제한 여부</description>
    <label>Regional Restriction Y/N</label>
    <type>Checkbox</type>
</CustomField>