force-app/main/default/objects/Lead/fields/jtUpsoAsgnNo__c.field-meta.xml
<CustomField>
    <fullName>jtUpsoAsgnNo__c</fullName>
    <label>jtUpsoAsgnNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>