force-app/main/default/objects/Lead/fields/jtUpsoMainEdf__c.field-meta.xml
<CustomField>
    <fullName>jtUpsoMainEdf__c</fullName>
    <label>jtUpsoMainEdf</label>
    <length>20</length>
    <type>Text</type>
</CustomField>