force-app/main/default/objects/Lead/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <externalId>true</externalId>
    <label>Keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>