force-app/main/default/objects/Lead/fields/KeywordSub__c.field-meta.xml
<CustomField>
    <fullName>KeywordSub__c</fullName>
    <label>KeywordSub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>